src_old/objects/ProcessLastSyncTime__c.object
<CustomObject>
    <fields>
        <fullName>CurrentProcessId__c</fullName>
        <label>Current Process Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessName__c</fullName>
        <label>Process Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncId__c</fullName>
        <label>Sync Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SyncTime__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <label>Process Last Sync Time</label>
    <nameField>
        <label>Process Last Sync Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes Last Sync Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>